// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro should throw error when importing { ThemeProvider }: should throw error when importing { ThemeProvider } 1`] = `
"
import { ThemeProvider } from '../../macro'

      ↓ ↓ ↓ ↓ ↓ ↓

MacroError: /Users/luc/w/test/styled-components/src/macro/test/macro.test.js: Invalid import: ThemeProvider. You can only import default, css, keyframes from 'styled-components/macro'.
"
`;

exports[`macro should work when extending a component: should work when extending a component 1`] = `
"
import React from 'react'
import styled from '../../macro'

const Hello = () => React.createComponent(div, null, 'hello')

styled(Hello)\`
  background: red;
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from 'styled-components';
import React from 'react';


const Hello = () => React.createComponent(div, null, 'hello');

_styled(Hello).withConfig({
  displayName: 'macrotest',
  componentId: 'sc-11gvsec-0'
})(['background:red;']);
"
`;

exports[`macro should work with a basic example: should work with a basic example 1`] = `
"
import styled from '../../macro'

styled.div\`
  background: \${p => (p.error ? 'red' : 'green')};
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from 'styled-components';


_styled.div.withConfig({
  displayName: 'macrotest',
  componentId: 'sc-11gvsec-0'
})(['background:', ';'], p => p.error ? 'red' : 'green');
"
`;

exports[`macro should work with css: should work with css 1`] = `
"
import { css } from '../../macro'

css\`
  color: \${props => (props.whiteColor ? 'white' : 'black')};
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import { css as _css } from 'styled-components';


_css(['color:', ';'], props => props.whiteColor ? 'white' : 'black');
"
`;

exports[`macro should work with require() to import styled-components: should work with require() to import styled-components 1`] = `
"
const myStyled = require('../../macro')

myStyled.div\`
  background: red;
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from 'styled-components';


_styled.div.withConfig({
  displayName: 'macrotest',
  componentId: 'sc-11gvsec-0'
})(['background:red;']);
"
`;
